--- a/PlatformApp/static/css/dashboard.css
+++ b/PlatformApp/static/css/dashboard.css
@@ -47,8 +47,8 @@
 .footer-container{
     height: 20px;
     text-align: center;
-    color: white;
-    padding-bottom: 20px;
+    color: #1A2930;
+    padding: 20px;
 }
 
 .page-container{
