--- a/PlatformApp/templates/index.html
+++ b/PlatformApp/templates/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>USIT Voting Challenge</title>
+    <title>USIT Dashboard</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
     <link rel="icon" href="http://static1.squarespace.com/static/55329952e4b07fb5e0470317/t/59b5bebb8419c20a25da60fc/1505087726265/?format=1500w">
 
