--- a/PlatformApp/templates/index.html
+++ b/PlatformApp/templates/index.html
@@ -38,7 +38,7 @@
               <label>
 
               </label>
-              {{ render_field(form.eid)}}
+              {{ render_field(form.email)}}
               <!-- <input type="email"required autocomplete="off"/> -->
             </div>
 
