Remove sign in button

--- a/PlatformApp/templates/dashboard.html
+++ b/PlatformApp/templates/dashboard.html
@@ -194,8 +194,8 @@
     {% if not showAttendance and not showAnalystGroup and not showFund %}
 
     <div class="sign-in-button-container">
-      <a href="/signin" role="button" class="sign-in-button">Sign In to GM</a>
-      {% if showAnalystGroupButton %}
+<!--       <a href="/signin" role="button" class="sign-in-button">Sign In to GM</a>
+ -->      {% if showAnalystGroupButton %}
         <a href="/analystgroup" role="button" class="sign-in-button">Analyst Group</a>
       {% endif %}
       {% if showFundButton %}
